// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton creates correct snapshot for danger styled button 1`] = `
<withStyles(Button)
  className="IconButton-buttonDanger-2"
  onClick={[Function]}
  raised={true}
>
  buttonText
  <withStyles(Icon)
    className="IconButton-icon-3"
  >
    store
  </withStyles(Icon)>
</withStyles(Button)>
`;

exports[`IconButton creates correct snapshot for required props 1`] = `
<withStyles(Button)
  className="IconButton-button-1"
  color="accent"
  onClick={[Function]}
  raised={true}
>
  buttonText
  <withStyles(Icon)
    className="IconButton-icon-3"
  >
    store
  </withStyles(Icon)>
</withStyles(Button)>
`;
